--- a/text/14_Line_Integrals.tex
+++ b/text/14_Line_Integrals.tex
@@ -193,189 +193,207 @@ energy, kinetic plus potential, is conserved.
 
 INDEPENDENCE OF PATH: GRADIENT FIELDS
 
-The work of the spin field S depends on the path. Example 4 took three pathsstraight
-line, quarter-circle, bent line. The work was 1, 42, and 0, different on each
-path. This happens for more than 99.99% of all vector fields. It does not happen for
+The work of the spin field $\vec S$ depends on the path. Example 4 took three pathsstraight
+line, quarter-circle, bent line. The work was 1, $\pi/2$, and 0: different on each
+path. This happens for more than 99.99\% of all vector fields. It does not happen for
 the most important fields. Mathematics and physics concentrate on very special
-fields-for which the work depends only on the endpoints. We now explain what
-happens, when the integral is independent of the path.
-Suppose you integrate from P to Q on one path, and back to P on another path.
-Combined, that is a closed path from P to P (Figure 15.7). But a backward integral
-is the negative of a forward integral, since dR switches sign. If the integrals from P
-to Q are equal, the integral around the closed path is zero:
-closed path 1 back path 2 path 1 path 2
-The circle on the first integral indicates a closed path. Later we will drop the P's.
-Not all closed path integrals are zero! For most fields F, different paths yield
+fields, for which the work depends only on the endpoints. We now explain what
+happens when the integral is independent of the path.
+Suppose you integrate from $P$ to $Q$ on one path, and back to $P$ on another path.
+Combined, that is a closed path from $P$ to $P$ (Figure 15.7). But a backward integral
+is the negative of a forward integral, since $d\vec R$ switches sign. If the integrals from $P$
+to $Q$ are equal, the integral around the closed path is zero:
+
+\begin{align*}
+\oint_P^P \vec F \cdot d\vec R &\int_P^Q\vec F \cdot d\vec R + &\int_Q^P\vec F \cdot d\vec R=&\int_P^Q\vec F \cdot d\vec R - &\int_P^Q\vec F \cdot d\vec R=0. \\
+\text{closed}&\text{path 1}&\text{back path 2}&\text{path 1}&\text{path 2}
+\end{align*}
+
+The circle on the first integral indicates a closed path. In fact it is not necessary for closed paths to list a particular start and endpoint $P$.
+Not all closed path integrals are zero! For most fields $\vec F$, different paths yield
 different work. For "conservative" fields, all paths yield the same work. Then zero 
-15 Vector Calculus
 work around a closed path conserves energy. The big question is: How to decide
 which fields are conservative, without trying all paths? Here is the crucial information
 about conservative fields, in a plane region R with no holes:
-15D F = M(x, y)i + N(x, y)j is a conservative field if it has these properties:
-A. The work J F dR around every closed path is zero.
-B. The work F d R depends only on P and Q, not on the path.
-C. F is a gradient field: M = df/ax and N = df/dy for some potential f(x, y).
-D. The components satisfy dM/ay = (3Nldx.
-A field with one of these properties has them all. D is the quick test.
-These statements A-D bring everything together for conservative fields (alias gradient
-fields). A closed path goes one way to Q and back the other way to P. The work
-cancels, and statements A and B are equivalent. We now connect them to C. Note:
-Test D says that the "curl" of F is zero. That can wait for Green's Theorem in the
-next section-the full discussion of the curl comes in 15.6.
-First, a gradient field F = grad f is conservative. The work is f (Q) - f (P), by the
-fundamental theorem for line integrals. It depends only on the endpoints and not the
-path. Therefore statement C leads back to B.
-Our job is in the other direction, to show that conservative fields Mi + Nj are
-gradients. Assume that the work integral depends only on the endpoints. We must
-construct a potentialf, so that F is its gradient. In other words, dfldx must be M and
-dfldy must be N.
-Fix the point P. Define f (Q) as the work to reach Q. Then F equals grad
-Check the reasoning. At the starting point P, f is zero. At every other point Q, f is
-the work J M dx + N dy to reach that point. Allpathshsfom P to Q give the same f(Q),
-because the field is assumed conservative. After two examples we prove that grad f
-agrees with F-the construction succeeds.
-back path 2 -
-Fig. 15.7 Conservative fields:  F dR = 0 and j@ F d R = f (Q) - f (P). Here f (P) = 0.
-EXAMPLE 5 Find f (x, y) when F = Mi + Nj = 2xyi + x2j. We want (: f /ax = 2xy
-and dfldy = x2.
-Solution 1 Choose P = (0,O). Integrate M dx + N dy along to (x, 0) and up to (x, y):
-(x. 0) 0, Y)
-2xy dx = 0 (since y = 0) x2dY = x2y (which is f ). S (0.0) S (x, 0)
-Certainly f = x2y meets the requirements: f, = 2xy and f, = x2. Thus F = gradf Note
-that dy = 0 in the first integral (on the x axis). Then dx = 0 in the second integral
-(X is fixed). The integrals add to f = x2y. 
-15.2 Line Integrals
-Solution 2 Integrate 2xydx + x2dy on the straight line (xt, yt) from t = 0 to t = 1:
-Iol 2(xt)(yt)(x dt) + (~t)~(y dt)= So13x2yt2dt= x2yt3]: = x2y.
-Most authors use Solution 1. I use Solution 2. Most students use Solution 3:
-Solution 3 Directly solve df/dx = M = 2xy and then fix up dfldy = N = x2:
-af/dx = 2xy gives f = x2y (plus any function of y).
-In this example x2y already has the correct derivative dfldy = x2. No additional
-function of y is necessary. When we integrate with respect to x, the constant of
-integration (usually C ) becomes a function C(y).
-You will get practice in finding f. This is only possible for conservative fields! I
-tested M = 2xy and N = x2 in advance (using D) to be sure that dM/dy = dN/dx.
-EXAMPLE 6 Look for f (x, y) when Mi + Nj is the spin field -yi + xj.
-Attempted solution 1 Integrate -y dx + x dy from (0,O)to (x, 0) to (x, y):
-I(x, 0)
--ydx=O and I
-(x. Y)
-x dy = xy (which seems like f).
-(0,O) (x. 0)
-Attempted solution 2 Integrate -y dx + x dy on the line (xt, yt) from t = 0 to 1 :
-So1-(yt)(x dt) + (xt)(y dt) = 0 (a different f, also wrong).
-Aitempted solution 3 Directly solve dfldx = -y and try to fix up af/dy = x:
-af/dx = -y gives f = -xy (plus any function C(y)).
-The y derivative of this f is -x + dC/dy. That does not agree with the required
-dfldy = x. Conclusion: The spin field -yi + xj is not conservative. There is no f.
-Test D gives dM/dy = -1 and dN/dx = + 1.
-To finish this section, we move from examples to a proof. The potential f(Q) is
-defined as the work to reach Q. We must show that its partial derivatives are M and
-N. This seems reasonable from the formula f (Q) = I M dx + N dy, but we have to
-think it through.
-Remember statement A, that all paths give the same f(Q). Take a path that goes
-from P to the left of Q. It comes in to Q on a line y = constant (so dy = 0). As the
-path reaches Q, we are only integrating M dx. The derivative of this integral, at Q, is
-df/ax = M. That is the Fundamental Theorem of Calculus.
-To show that af/ay= N, take a different path. Go from P to a point below Q. The
-path comes up to Q on a vertical line (so dx = 0). Near Q we are only integrating
-N dy, so i?f/dy= N.
-The requirement that the region must have no holes will be critical for test D.
-EXAMPLE 7 Find f (x, y) = x dx + y dy. Test D is passed: aN/ax= 0= dM/dy.
-Solution 1 j:",: x dx = +x2is added to j:;:; y dy = fy2.
-Solution 2 1; (xt)(x dt) + (yt)(y dt) = 1; (x2+ y2)t dt =f (x2+ y2).
-Solution 3 afjax = x gives f = +x2+ C(y).Then af/dy = y needs C(y)= :y2. 
-562 15 Vector Calculus
-15.2 EXERCISES
-Read-through questions
-Work is the a of F dR. Here F is the b and R is
-the c . The d product finds the component of
-in the direction of movement dR = dxi + dyj. The straight
-path (x, y) = (t, 2t) goes from f at t = 0 to g at t =
-1 withdR=dti+ h .TheworkofF=3i+jisjF=dR=
-j i dt= i .
-Another form of d R is T ds, where T is the k vector to
-the path and ds = ,/T. For the path (t, 2t), the unit vector
-Tis m andds= n dt.ForF=3i+j,F*Tdsisstill
-0 dt. This F is the gradient off = P . The change in
-f= 3x +y from (0,O) to (1,2) is q .
-When F = gradf, the dot product F dR is (af/dx)dx + r = df: The work integral from P to Q is j df = s . In this case the work depends on the t but not on the
-u . Around a closed path the work is v . The field is
-called w . F = (1 + y)i + xj is the gradient off = x .
-The work from (0,O) to (1,2) is Y , the change in potential.
-For the spin field S = 2 , the work (does)(does not)
-depend on the path. The path (x, y) = (3 cos t, 3 sin t) is a
-circle with SgdR = A . The work is B around the
-complete circle. Formally jg(x, y)ds is the limit of the sum
-c.
-The four equivalent properties of a conservative field F =
-Mi+ Nj are A: D , B: E , C: F , and D: G . Test D is (passed)(not passed) by F = (y + 1)i + xj. The work
-IF dR around the circle (cos t, sin t) is H . The work on
-the upper semicircle equals the work on I . This field is
-the gradient off = J , so the work to (- 1,0) is K .
-Compute the line integrals in 1-6.
-jcds and jcdy: x = t, y = 2t, 0 6 t < 1.
-fcxds and jcxyds: x=cost, y=sint, O<t<n/2.
-S, xy ds: bent line from (0,O) to (1, 1) to (1,O).
-1, y dx - x dy: any square path, sides of length 3.
-fc dx and jc y dx: any closed circle of radius 3.
-Jc (dsldt) dt: any path of length 5.
-Does if xy dy equal f xy2]:?
-Does jfx dx equal fx2]:?
-Does (jc d~)~ = (IC d~)~ + (fC dy)l?
-Does jc (d~)~ make sense?
-11-16 find the work in moving from (1,O) to (0,l). When F
-is conservative, construct f: choose your own path when F is
-not conservative.
-11 F=i+yj 12 F=yi+j
-17 For which powers n is S/rn a gradient by test D?
-18 For which powers n is R/rn a gradient by test D?
-19 A wire hoop around a vertical circle x2 + z2 = a2 has
-density p = a + z. Find its mass M = pds.
-20 A wire of constant density p lies on the semicircle
-x2 + Y2 = a2, y 3 0. Find its mass M and also its moment
-Mx = 1 py ds. Where is its center of mass 2 = My/M, j = Mx/
-M?
-21 If the density around the circle x2 + y2 = a2 is p = x2, what
-is the mass and where is the center of mass?
-22 Find F dR along the space curve x = t, y = t2, z = t3,
-O<t<l.
-(a) F = grad (xy + xz) (b) F = yi - xj + zk
-23 (a) Find the unit tangent vector T and the speed dsldt
-along the path R = 2t i + t2 j.
-(b) For F = 3xi + 4j, find F T ds using (a) and F dR
-directly.
-(c) What is the work from (2, 1) to (4,4)?
-24 If M(x, y, z)i + N(x, y, z)j is the gradient of f(x, y, z), show
-that none of these functions can depend on z.
-25 Find all gradient fields of the form M(y)i + N(x)j.
-26 Compute the work W(x, y) = j M dx + N dy on the
-straight line path (xt, yt) from t = 0 to t = 1. Test to see if aW/
-ax = M and aWpy = N.
-(a) M = y3, N = 3xy2 (b) M = x3, N = 3yx2
-(c)M=x/y,N=y/x (d)M=ex+Y,N=e"+Y
-27 Find a field F whose work around the unit square (y = 0
-then x = 1 then y = 1 then x = 0) equals 4.
-28 Find a nonconservative F whose work around the unit
-circle x2 + y2 = 1 is zero.
-In 29-34 compute 1 F dR along the straight line R = ti + tj
-and the parabola R = ti + t2j, from (0,O) to (1,l). When F is a
-gradient field, use its potential f (x, y).
-29 F=i-2j 30 F = x2j
-33 F=yi-xj 34 F = (xi + yj)/(x2 + y2 + 1)
-35 For which numbers a and b is F = axyi + (x2 + by)j a
-gradient field?
-36 Compute j - y dx + x dy from (1,O) to (0,l) on the line
-x = 1 - t2, y = t2 and the quarter-circle x = cos 2t, y = sin 2t.
-Example 4 found 1 and n/2 with different parameters. 
 
-Apply the test Nx = My to 37-42. Find f when test D is passed. 43 Around the unit circle find 4 ds and  dx and 8 xds.
-44 True or false, with reason:
-(a) When F = yi the line integral lFedR along a curve
-xi + yj grad xy from P to Q equals the usual area-under the curve.
-39 $F = \frac{xi+yj}{|xi+yj|}$ 40 $F = \frac{grad xy}{|grad xy|}$
-(b) That line integral depends only on P and Q, not on the
-curve.
-41 F=R+S 42 F =(ax + by)i + (cx + dy)j (c) That line integral around the unit circle equals n. 
+\keyidea{idea:conservative_field}{Properties of a Conservative Field}{
+$\vec F = M(x, y)\vec i + N(x, y)\vec j$ is a conservative field if it has these properties:
+\begin{enumerate}
+\item The work $\int \vec F d\vec R$ around every closed path is zero.
+\item The work $\int_P^Q \vec F d\vec R$ depends only on $P$ and $Q$, not on the path.
+\item $\vec F$ is a gradient field: $M = df/dx$ and $N = df/dy$ for some potential function $f(x, y)$.
+\item The components satisfy $\partial M/\partial y = \partial N/ \partial x$.
+\end{enumerate}
+A field with one of these properties has them all. Property 4 gives a quick test.
+}
+These four properties bring everything together for conservative fields (also known as \emph{gradient
+fields}). A closed path goes one way to $Q$ and back the other way to $P$. The work
+cancels, and statements 1 and 2 are equivalent. We now connect them to statement 3. 
+
+First, a gradient field $\vec F = \nabla f$ is conservative. The work is $f(Q) - f(P)$, by the
+fundamental theorem for line integrals. It depends only on the endpoints and not the
+path. Therefore statement $C$ leads back to $B$.
+Our job is in the other direction, to show that conservative fields $M\vec i + N\vec j$ are
+gradients. Assume that the work integral depends only on the endpoints. We must
+construct a potential $f$, so that $\vec F$ is its gradient. In other words, $df/dx$ must be $M$ and
+$df/dy$ must be $N$.
+
+Fix the point $P$. Define $f(Q)$ as the work to reach $Q$. Then $\vec F$ equals $\nabla f$.
+
+Check the reasoning. At the starting point $P$, $f$ is zero. At every other point $Q$, $f$ is
+the work $\int M dx + N dy$ to reach that point. All paths from $P$ to $Q$ give the same $f(Q)$,
+because the field is assumed conservative. After two examples we prove that $\nabla f$
+agrees with $\vec F$ -- the construction succeeds.
+
+EXAMPLE 5 Find $f(x,y)$ when $\vec F = M\vec i + N\vec j = 2xy\vec i + x^2\vec j$. We want $\partial f /\partial x = 2xy$
+and $\partial f/\partial y = x^2$.
+Solution 1 Choose $P = (0,0)$. Integrate $M dx + N dy$ along to $(x, 0)$ and up to $(x, y)$:
+$$\int_{(0,0)}^{(x,0)}2xydx=0 \text{(since y = 0)   } \int_{(x,0)}^{(x,y)}x^2dy = x^2y \text{ (which is } f \text{ ).}$$ 
+
+Certainly $f = x^2y$ meets the requirements: $f_x= 2xy$ and $f_y = x^2$. Thus $\vec F = \nabla f$. Note
+that $dy = 0$ in the first integral (on the $x$ axis). Then $dx = 0$ in the second integral
+($x$ is fixed). The integrals add to $f = x^2y$. 
+
+Solution 2 Integrate $2xydx + x^2dy$ on the straight line $\left(xt, yt\right)$ from $t = 0$ to $t = 1$:
+
+$$\int_0^1 2(xt)(yt)(x dt) + (xt)^2(y dt)= \int_0^1 3x^2yt^2dt = x^2yt^3\right]_0^1: = x^2y.$$
+
+Most authors use Solution 1. I use Solution 2. Most students use Solution 3:
+
+Solution 3 Directly solve $\partial f/\partial x = M = 2xy$ and then fix up $\partial f/\partial y = N = x^2$:
+$$\partial f/\partial x = 2xy \text{ gives }f = x^2y \text{ (plus any function of }y).$$
+
+In this example $x^2y$ already has the correct derivative $\partial f/\partial y = x^2$. No additional
+function of $y$ is necessary. When we integrate with respect to $x$, the constant of
+integration (usually $C$ ) becomes a function $C(y)$.
+
+You will get practice in finding $f$. This is only possible for conservative fields!
+
+EXAMPLE 6 Look for $f(x,y)$ when $M\vec i + N\vec j$ is the spin field $-y\vec i + x\vec j$.
+Attempted solution 1 Integrate $-y dx + x dy$ from $(0,0)$ to $(x, 0)$ to $(x, y)$:
+$$\int_{(0,0)}^{(x,0)}-ydx=0\text{ and }$$\int_{(x,0)}^{(x,y)}x dy = xy \text{ (which seems like }f).$$
+
+Attempted solution 2 Integrate $-y dx + x dy$ on the line $(xt, yt)$ from $t = 0$ to $1$ :
+
+$$\int_0^1-(yt)(x dt) + (xt)(y dt) = 0 \text{ (a different }f \text{, also wrong).}$$
+
+Attempted solution 3 Directly solve $\partial f/\partial x = -y$ and try to fix up $\partial f/\partial y = x$:
+$\partial f/\partial x = -y$ gives $f = -xy$ (plus any function $C(y)$).
+The $y$ derivative of this $f$ is $-x + dC/dy$. That does not agree with the required
+$\partial f/\partial y = x$. Conclusion: The spin field $-y\vec i + x\vec j$ is not conservative. There is no $f$.
+
+Finally, note that $\partial M/\partial y = -1$ and $\partial N/\partial x =  1$. Since these partial derivatives are not the same, we have another verification that $f$ is not conservative.
+
+To finish this section, we move from examples to a proof. The potential $f(Q)$ is
+defined as the work to reach $Q$. We must show that its partial derivatives are $M$ and
+$N$. This seems reasonable from the formula $f (Q) = \int M dx + N dy$, but we have to
+think it through.
+
+Remember statement A, that all paths give the same $f(Q)$. Take a path that goes
+from $P$ to the left of $Q$. It comes in to $Q$ on a horizontal line (so $dy = 0$). As the
+path reaches $Q$, we are only integrating $M dx$. The derivative of this integral, at $Q$, is
+$\partial f/\partial x = M$. That is the Fundamental Theorem of Calculus.
+To show that $\partial f/\partial y= N$, take a different path. Go from $P$ to a point below $Q$. The
+path comes up to $Q$ on a vertical line (so $dx = 0$). Near $Q$ we are only integrating
+$N dy$, so $\partial f/\partial y= N$.
+
+The requirement that the region must have no holes will be critical for test D.
+
+EXAMPLE 7 Find $f (x, y) =\int_{(0,0)}^{(x,y)} x dx + y dy$. Test D is passed: $\partial N/\partial x= 0= \partial M/\partial y$.
+Solution 1 $\int_{(0,0)}^{(x,0)} x dx = \frac{1}{2}x^2$ is added to $\int_{(x,0)}^{(x,y)} y dy = \frac{1}{2}y^2$.
+Solution 2 $\int_0^1 (xt)(x dt) + (yt)(y dt) = \int_0^1 (x^2+ y^2)t dt =\frac{1}{2}(x^2+ y^2)$.
+Solution 3 $\partial f/\partial x = x$ gives $f = \frac{1}{2}x^2+ C(y)$. Then $\partial f/\partial y = y$ needs $C(y)= \frac{1}{2}y^2$. 
+
+%15.2 EXERCISES
+%Read-through questions
+%Work is the a of F dR. Here F is the b and R is
+%the c . The d product finds the component of
+%in the direction of movement dR = dxi + dyj. The straight
+%path (x, y) = (t, 2t) goes from f at t = 0 to g at t =
+%1 withdR=dti+ h .TheworkofF=3i+jisjF=dR=
+%j i dt= i .
+%Another form of d R is T ds, where T is the k vector to
+%the path and ds = ,/T. For the path (t, 2t), the unit vector
+%Tis m andds= n dt.ForF=3i+j,F*Tdsisstill
+%0 dt. This F is the gradient off = P . The change in
+%f= 3x +y from (0,O) to (1,2) is q .
+%When F = gradf, the dot product F dR is (af/dx)dx + r = df: The work integral from P to Q is j df = s . In this case the work depends on the t but not on the
+%u . Around a closed path the work is v . The field is
+%called w . F = (1 + y)i + xj is the gradient off = x .
+%The work from (0,O) to (1,2) is Y , the change in potential.
+%For the spin field S = 2 , the work (does)(does not)
+%depend on the path. The path (x, y) = (3 cos t, 3 sin t) is a
+%circle with SgdR = A . The work is B around the
+%complete circle. Formally jg(x, y)ds is the limit of the sum
+%c.
+%The four equivalent properties of a conservative field F =
+%Mi+ Nj are A: D , B: E , C: F , and D: G . Test D is (passed)(not passed) by F = (y + 1)i + xj. The work
+%IF dR around the circle (cos t, sin t) is H . The work on
+%the upper semicircle equals the work on I . This field is
+%the gradient off = J , so the work to (- 1,0) is K .
+%Compute the line integrals in 1-6.
+%jcds and jcdy: x = t, y = 2t, 0 6 t < 1.
+%fcxds and jcxyds: x=cost, y=sint, O<t<n/2.
+%S, xy ds: bent line from (0,O) to (1, 1) to (1,O).
+%1, y dx - x dy: any square path, sides of length 3.
+%fc dx and jc y dx: any closed circle of radius 3.
+%Jc (dsldt) dt: any path of length 5.
+%Does if xy dy equal f xy2]:?
+%Does jfx dx equal fx2]:?
+%Does (jc d~)~ = (IC d~)~ + (fC dy)l?
+%Does jc (d~)~ make sense?
+%11-16 find the work in moving from (1,O) to (0,l). When F
+%is conservative, construct f: choose your own path when F is
+%not conservative.
+%11 F=i+yj 12 F=yi+j
+%17 For which powers n is S/rn a gradient by test D?
+%18 For which powers n is R/rn a gradient by test D?
+%19 A wire hoop around a vertical circle x2 + z2 = a2 has
+%density p = a + z. Find its mass M = pds.
+%20 A wire of constant density p lies on the semicircle
+%x2 + Y2 = a2, y 3 0. Find its mass M and also its moment
+%Mx = 1 py ds. Where is its center of mass 2 = My/M, j = Mx/
+%M?
+%21 If the density around the circle x2 + y2 = a2 is p = x2, what
+%is the mass and where is the center of mass?
+%22 Find F dR along the space curve x = t, y = t2, z = t3,
+%O<t<l.
+%(a) F = grad (xy + xz) (b) F = yi - xj + zk
+%23 (a) Find the unit tangent vector T and the speed dsldt
+%along the path R = 2t i + t2 j.
+%(b) For F = 3xi + 4j, find F T ds using (a) and F dR
+%directly.
+%(c) What is the work from (2, 1) to (4,4)?
+%24 If M(x, y, z)i + N(x, y, z)j is the gradient of f(x, y, z), show
+%that none of these functions can depend on z.
+%25 Find all gradient fields of the form M(y)i + N(x)j.
+%26 Compute the work W(x, y) = j M dx + N dy on the
+%straight line path (xt, yt) from t = 0 to t = 1. Test to see if aW/
+%ax = M and aWpy = N.
+%(a) M = y3, N = 3xy2 (b) M = x3, N = 3yx2
+%(c)M=x/y,N=y/x (d)M=ex+Y,N=e"+Y
+%27 Find a field F whose work around the unit square (y = 0
+%then x = 1 then y = 1 then x = 0) equals 4.
+%28 Find a nonconservative F whose work around the unit
+%circle x2 + y2 = 1 is zero.
+%In 29-34 compute 1 F dR along the straight line R = ti + tj
+%and the parabola R = ti + t2j, from (0,O) to (1,l). When F is a
+%gradient field, use its potential f (x, y).
+%29 F=i-2j 30 F = x2j
+%33 F=yi-xj 34 F = (xi + yj)/(x2 + y2 + 1)
+%35 For which numbers a and b is F = axyi + (x2 + by)j a
+%gradient field?
+%36 Compute j - y dx + x dy from (1,O) to (0,l) on the line
+%x = 1 - t2, y = t2 and the quarter-circle x = cos 2t, y = sin 2t.
+%Example 4 found 1 and n/2 with different parameters. 
+%
+%Apply the test Nx = My to 37-42. Find f when test D is passed. 43 Around the unit circle find 4 ds and  dx and 8 xds.
+%44 True or false, with reason:
+%(a) When F = yi the line integral lFedR along a curve
+%xi + yj grad xy from P to Q equals the usual area-under the curve.
+%39 $F = \frac{xi+yj}{|xi+yj|}$ 40 $F = \frac{grad xy}{|grad xy|}$
+%(b) That line integral depends only on P and Q, not on the
+%curve.
+%41 F=R+S 42 F =(ax + by)i + (cx + dy)j (c) That line integral around the unit circle equals n. 
 
 %%\printexercises{exercises/13_06_exercises}
