changes to line integrals

--- a/text/14_Line_Integrals.tex
+++ b/text/14_Line_Integrals.tex
@@ -80,7 +80,8 @@ nonzero on the semicircle. Second reason: No function $f$ satisfies both $df/ dx
 0$. To see this, notice that the first equation requires $f$ to depend on $y$, whereas the second equation requires $f$ to be constant with respect to $y$. Without a potential we cannot substitute $P$ and $Q$ -- and the work depends
 on the path.
 
-THE DEFINITION OF LINE INTEGRALS
+\noindent\textbf{\large The Definition of Line Integrals}\\
+
 We go back to the start, to define $\vec F \cdot \vec T ds$. We can think of $\vec F \cdot \vec T$ as a function $g(x, y)$
 along the path, and define its integral as a limit of sums:
 
@@ -117,14 +118,14 @@ That is a line integral in three-dimensional space. It shows how to introduce $t
 it misses the main point of this section, because it contains no vector field $\vec F$. This
 section is about work, not just mass.
 
-DIFFERENT FORMS OF THE WORK INTEGRAL
+\noindent\textbf{\large Different Forms of the Work Integral}\\
 
 The work integral $\int F \cdot \vec T ds$ can be written in a better way. The force is $\vec F = M\vec i + N\vec j$.
 A small step along the curve is $dx \vec i + dy \vec j$. Work is force times distance, but it is only
 the force component along the path that counts. The dot product $F\cdot T ds$ finds that
 component automatically. 
 
-I 15C The vector to a point on $C$ is $\vec R = x\vec i + y\vec j$. Then $d\vec R = \vec T ds = dx \vec i + dy \vec j$:
+The vector to a point on $C$ is $\vec R = x\vec i + y\vec j$. Then $d\vec R = \vec T ds = dx \vec i + dy \vec j$:
 
 $$\text{work}=\int_C\vec F \cdot d\vec R=\int_C M dx+N dy.$$ 
 
@@ -173,7 +174,7 @@ speed, the work is the same. We can choose another parameter $\tau$, since $(ds/
 $(ds/d\tau)d\tau$ both equal $ds$. Traveling twice as fast on the straight path $(x = 1 - 2\tau,
 y = 2\tau)$ we finish at $\tau = \frac{1}{2}$ instead of $\tau = 1$. The work is still $1$:
 
-CONSERVATION OF TOTAL ENERGY (KINETIC + POTENTIAL)
+\noindent\textbf{\large Conservation of Total Energy (Kinetic + Potential)}\\
 
 When a force field does work on a mass $m$, it normally gives that mass a new velocity.
 Newton's Law is $\vec F =m\vec a = d\vec v/dt$. (It is a vector law. Why write out three components?)
@@ -193,7 +194,7 @@ work is also the change in potential - with a minus sign from physics:
 Comparing \ref{workeq1} with \ref{workeq2}, the combination $\frac{1}{2}m\mid\vec v \mid ^2 + f$ is the same at $P$ and $Q$. The total
 energy, kinetic plus potential, is conserved.
 
-INDEPENDENCE OF PATH: GRADIENT FIELDS
+\noindent\textbf{\large Independence of Path: Gradient Fields}\\
 
 The work of the spin field $\vec S$ depends on the path. Example 4 took three pathsstraight
 line, quarter-circle, bent line. The work was 1, $\pi/2$, and 0: different on each
