More changes (Lagrange and Sph)
Fixed some errors and continued work on Sph integration.

--- a/text/12_Lagrange_Multipliers.tex
+++ b/text/12_Lagrange_Multipliers.tex
@@ -24,7 +24,7 @@ In the third equation, substitute $2\lambda$ for $2x$ and $\frac{1}{2}\lambda$ f
 $$x = \lambda = \frac{2}{5}k, \: y = \frac{1}{2}\lambda = \frac{1}{5}k$$
 and so 
 $$f_{\text{min}} = \left( \frac{2}{5}k \right)^2 + \left( \frac{1}{5}k \right)^2 = \frac{1}{5}k^2.$$
-The winning point is $(x_{\text{min}},y_{\text{min}}) = \left( \frac{2}{5}k, \frac{1}{5}k)$.  It minimizes the distance squared $f = x^2 + y^2 = \frac{1}{5}k^2$ from the origin to the line.}
+The winning point is $(x_{\text{min}},y_{\text{min}}) = \left( \frac{2}{5}k, \frac{1}{5}k \right)$.  It minimizes the distance squared $f = x^2 + y^2 = \frac{1}{5}k^2$ from the origin to the line.}
 
 \theorem{thm:lagrange1}{Lagrange Multipliers with One Constraint}
 {At the minimum or maximum of $f(x, y)$ subject to $g(x, y) = k$, the gradient of $f$ is
