--- a/text/13_Cylindrical_Spherical.tex
+++ b/text/13_Cylindrical_Spherical.tex
@@ -78,15 +78,29 @@ to convert to spherical coordinates.\\
 x & = \rho \sin\phi \cos\theta = 3 \sin\left( \frac{2\pi}{3}\right) \cos\left(\frac{\pi}{6}\right) = 3\left( \frac{\sqrt{3}}{2}\right)\left(\frac{\sqrt{3}}{2}\right) = \dfrac{9}{4} \\
 y & = \rho \sin\phi \sin\theta = 3 \sin\left( \frac{2\pi}{3}\right) \sin\left(\frac{\pi}{6}\right = 3\left( \frac{\sqrt{3}}{2}\right)\left( \frac{1}{2}\right) = \dfrac{3\sqrt{3}}{4} \\
 z & = \rho \cos\phi = 3 \cos\left( \frac{2\pi}{3} \right) = 3\left(\frac{1}{2}\right) = \dfrac{3}{2}\\
-which corresponds to the Cartesian coordinates of $\left( \dfrac{9}{4}, \dfrac{3\sqrt{3}}{4}, \dfrac{3}{2}\right)$.\\
 \end{align*}
+which corresponds to the Cartesian coordinates of $\left( \dfrac{9}{4}, \dfrac{3\sqrt{3}}{4}, \dfrac{3}{2}\right)$.\\
 }
 
-Surfaces like spheres and cones can be easily described in spherical coordinates.  For example, $\rho = R$ describes the surface of a sphere of radious $R$, while $\phi = \dfrac{\pi}{3}$ describes a conical surface opening up at a $60$ degree angle from $z$-axis (or a $30$ degree angle from the $xy$-plane). Some solids, such as cones or parts of spheres, have bounds which are easily described in spherical coordinates, too.  For example, the bounds
+Surfaces like spheres and cones can be easily described in spherical coordinates.  For example, $\rho = R$ describes the surface of a sphere of radius $R$, while $\phi = \dfrac{\pi}{3}$ describes a conical surface opening up at a $60$ degree angle from $z$-axis (or a $30$ degree angle from the $xy$-plane). Some solids, such as cones or parts of spheres, have bounds which are easily described in spherical coordinates, too.  For example, the bounds
 $$0 \leq \rho \leq 1, 0 \leq \theta \leq 2\pi, \dfrac{\pi}{2} \leq \phi \leq \pi$$
 describes the solid lower half unit sphere, while the bounds
 $$0 \leq \rho \leq 1, 0 \leq \theta \leq 2\pi, 0 \leq \phi \leq \dfrac{\pi}{4}$$
 describes a conical solid opening up with a spherical top.\\
+
+If one is to integrate over a solid $D$ best described in spherical coordinates, such as when finding its volume, one can think of the solid as being divided into spherical boxes or spherical wedges of thickness $d\rho$ and angles $d\theta$ and $d\phi$.  The dimensions of this spherical box, as seen in Figure \ref{}, are $d\rho$, $\rho \: d\phi$ (arc of circle of radius $\rho$ and angle $d\phi$), and $\rho \: \sin\phi \: d\theta$ (arc of a circle with radius $\rho \: \sin\phi$ and angle $d\theta$). Therefore the approximate volume of the spherical box is
+$$dV = \rho^2 \: \sin\phi \: d\rho \: d\theta \: d\phi.$$
+Therefore to integrate a function $f(x,y,z)$ over a region $E$ described using spherical coordinates, one would compute
+$$\iiint_E f(x,y,z) \: dA = \iiint_E f(\rho,\theta,\phi) \: \rho^2 \: \sin\phi \: d\rho \: d\theta \: d\phi$$
+where the bounds on $\rho$, $\theta$, and $\phi$ are as appropriate to describe the solid $E$. As a first example of this, we will verify the geometric formula for the volume of a sphere.\\
+
+\example{ex_volume03}{}{Determine the volume of a sphere of radius $R$.}{Let $E$ be the sphere of radius $R$ centered at the origin.  Then we can describe $E$ using spherical coordinates as simply all points $(\rho,\theta,\phi)$ where
+$$0 \leq \rho \leq R, \: 0 \leq \theta \leq 2\pi, \: 0 \leq \phi \leq \pi.$$
+Therefore the volume of this ball is equal to
+$$V = \int_0^{2pi} \int_0^{\pi} \int_0^R \rho^2 \: \sin\phi \: d\rho \: d\phi \: d\theta = \left( \dfrac{1}{3}\rho^3 \right]_{0}^{R} \left( -\cos\phi \right]_{0}^{\pi} \left( \theta \right]_{0}^{2\pi} = \dfrac{1}{3}R^3 (2) (2\pi)$$
+which is equal to the familiar formula for the volume of a sphere being $\dfrac{4}{3}\pi R^3$.\\
+}
+
 
 
 \printexercises{exercises/13_07_exercises}
