--- a/text/13_Cylindrical_Spherical.tex
+++ b/text/13_Cylindrical_Spherical.tex
@@ -25,7 +25,7 @@ This half-cylinder is shown in Figure \ref. \\
 Surfaces and solids described using Cartesian coordinates can also be written using cylindrical coordinates, and vice versa, using our conversion formulas above.\\
 
 \example{ex_cylsurface}{}{Consider the surface described by $z=r^2$ in cylindrical coordinates.  Write the equation for this surface in Cartesian coordinates and identify the surface.}{We know that $r^2 = x^2 + y^2$, and so we can write $z = x^2 + y^2$.  This is a paraboloid with vertex at the origin opening up. See Figure \ref. \\
-}  
+}\\
 
 
 
@@ -38,12 +38,12 @@ $$V = \iiint_D \: dV = \iiint_D \: r \: dr \: d\theta \: dz.$$
 Using our bounds on $r$, $\theta$, and $z$ that describe $D$ as our bounds of integration, we get a volume of
 $$V = \int_0^3 \int_0^{\pi} \int_0^1 r \: dr \: d\theta \: dz = \int_0^3 \int_0^{\pi} \dfrac{1}{2} \: d\theta \: dz = \dfrac{3\pi}{2}$$
 cubic units.\\
-}
+}\\
 
 \example{ex_conevolume}{}{The surface $z = 1 - r$ encloses a conical solid between itself and the $xy$-plane.  Find the volume of this solid as seen in Figure \ref.}{The cone $z = 1-r$ intersects the $xy$-plane ($z = 0$) at a radius of $r = 1$.  This puts the bounds on $r$ as $0 \leq r \leq 1$, and clearly the bounds on $\theta$ would be $0 \leq \theta \leq 2\pi$ since the solid is the full cone.  Since the solid is not a cylinder, at least one of the bounds on $z$ must be non-constant.  At any radius $r$, the height of the solid is bounded between the $xy$-plane and the surface $z = 1-r$.  Therefore the bounds on $z$ are $0 \leq z \leq 1-r$, and we will integrate with respect to $dz$ first.  Therefore the volume is
 $$V = \int_{0}^{2\pi} \int_{0}^{1} \int_{0}^{1-r} r \: dz \: dr \: d\theta = 2\pi \int_0^1 (1-r)r \: dr$$
 which evaluates to a volume of $\dfrac{\pi}{3}$ cubic units.\\
-}
+}\\
 
 
 \example{ex_volume02}{}{A solid $D$ is the region inside the cylinder $x^2 + y^2 = 1$, below the plane $z = 2$ and above the paraboloid $z = 1 - x^2 - y^2$, with all distances in meters.  See Figure \ref.  If the density of this solid is 
@@ -53,7 +53,7 @@ $$0 \leq r \leq 1, \: 0 \leq \theta \leq 2\pi, \: 1-x^2-y^2 = 1-r^2 \leq z \leq 
 and the density function, when converted to cylindrical coordinates, is $\delta(r,\theta,z) = \sqrt{r^2} = r.$  Integrating using the order $dz \: d\theta \: dr$ and the additional factor of $r$ for cylindrical coordinates yields a mass of
 $$\int_{0}^{1} \int_{0}^{2\pi} \int_{1-r^2}^{2} r \: r \: dz \: d\theta \: dr = 2\pi \int_0^1 r^2 - r^4 \: dr = 2\pi \left( \dfrac{1}{12} \right) = \dfrac{\pi}{6}$$
 kilograms.\\
-}
+}\\
 
 \noindent\textbf{\large Triple Integration with Spherical Coordinates}\\
 
@@ -79,8 +79,7 @@ x & = \rho \sin\phi \cos\theta = 3 \sin\left( \frac{2\pi}{3}\right) \cos\left(\f
 y & = \rho \sin\phi \sin\theta = 3 \sin\left( \frac{2\pi}{3}\right) \sin\left(\frac{\pi}{6}\right = 3\left( \frac{\sqrt{3}}{2}\right)\left( \frac{1}{2}\right) = \dfrac{3\sqrt{3}}{4} \\
 z & = \rho \cos\phi = 3 \cos\left( \frac{2\pi}{3} \right) = 3\left(\frac{1}{2}\right) = \dfrac{3}{2}\\
 \end{align*}
-which corresponds to the Cartesian coordinates of $\left( \dfrac{9}{4}, \dfrac{3\sqrt{3}}{4}, \dfrac{3}{2}\right)$.\\
-}
+which corresponds to the Cartesian coordinates of $\left( \dfrac{9}{4}, \dfrac{3\sqrt{3}}{4}, \dfrac{3}{2}\right)$.\\} \\
 
 Surfaces like spheres and cones can be easily described in spherical coordinates.  For example, $\rho = R$ describes the surface of a sphere of radius $R$, while $\phi = \dfrac{\pi}{3}$ describes a conical surface opening up at a $60$ degree angle from $z$-axis (or a $30$ degree angle from the $xy$-plane). Some solids, such as cones or parts of spheres, have bounds which are easily described in spherical coordinates, too.  For example, the bounds
 $$0 \leq \rho \leq 1, 0 \leq \theta \leq 2\pi, \dfrac{\pi}{2} \leq \phi \leq \pi$$
@@ -99,8 +98,24 @@ $$0 \leq \rho \leq R, \: 0 \leq \theta \leq 2\pi, \: 0 \leq \phi \leq \pi.$$
 Therefore the volume of this ball is equal to
 $$V = \int_0^{2pi} \int_0^{\pi} \int_0^R \rho^2 \: \sin\phi \: d\rho \: d\phi \: d\theta = \left( \dfrac{1}{3}\rho^3 \right]_{0}^{R} \left( -\cos\phi \right]_{0}^{\pi} \left( \theta \right]_{0}^{2\pi} = \dfrac{1}{3}R^3 (2) (2\pi)$$
 which is equal to the familiar formula for the volume of a sphere being $\dfrac{4}{3}\pi R^3$.\\
-}
+}\\
 
+\example{ex_volume04}{}{Evaluate the integral
+$$\iiint_E x^2 + y^2 + z^2 \: dV$$
+where $E$ is the solid that lies above the cone $z = \sqrt{x^2 + y^2}$ but below the sphere of radius $\frac{1}{2}$ centered at $\left( 0,0,\frac{1}{2}\right)$.}
+{The cone $z = \sqrt{x^2 + y^2}$ is the cone pointing upward from the origin at an angle of $\frac{\pi}{4}$ from the $xy$-plane. The solid $E$ therefore consists of a half-spherical top with a conical bottom, with the point of the cone at the origin, meeting the spherical top at the horizontal equator of the sphere.\\
+
+To describe this solid in spherical coordinates, note that the sphere of radius $\frac{1}{2}$ centered at the point $\left( 0,0,\frac{1}{2}\right)$ can be written as $$x^2 + y^2 + \left( z - \frac{1}{2}\right)^2 = \frac{1}{4}$$ which is equivalent to $x^2 + y^2 + z^2 = z$. In spherical coordinates, this says $\rho^2 = \rho \: \cos\phi$, or $\rho = \cos\phi$.  As for the cone, the equation $\phi = \frac{\pi}{4}$ for $\rho > 0$ describes this surface.  Therefore $E$ can be described as all points $\left( \rho, \theta,\phi\right)$ with $0 \leq \rho \leq \cos\phi$, $0 \leq \theta \leq 2\pi$, and $0 \leq \phi \leq \frac{\pi}{4}$.  \\
+
+Lastly, to integrate we need to write the integrand $x^2 + y^2 + z^2$ as $\rho^2$ and include the spherical integration factor $\rho^2 \: \sin\phi$.  Therefore
+\begin{eqnarray*}
+\iiint_E x^2 + y^2 + z^2 \: dV & = & \int_0^{2\pi} \int_0^{\pi/4} \int_0^{\cos\phi} \rho^4 \: \sin\phi \: d\rho \: d\phi \: d\theta \\
+ & = & 2\pi \: \int_0^{\pi/4} \sin\phi \left( \dfrac{1}{5} \rho^5 \right]_{0}^{\cos\phi} \: d\phi \\
+ & = & \dfrac{2}{5}\pi \int_0^{\pi/4} \cos^5\phi \sin\phi \: d\phi \\
+ & = & \dfrac{2}{5}\pi \left( -\dfrac{1}{6}\cos^6\phi \right]_{0}^{\pi/4} \\
+ & = & \dfrac{2}{5}\pi \left( \dfrac{1}{8} - 1 \right) = \dfrac{7\pi}{120} \\
+\end{eqnarray*}
+}\\
 
 
 \printexercises{exercises/13_07_exercises}
